--- a/frontend/src/router/layouts/MainLayout.scss
+++ b/frontend/src/router/layouts/MainLayout.scss
@@ -6,4 +6,22 @@
   & > .container {
     flex: 1;
   }
+
+  & > footer {
+    min-height: 4.1rem;
+
+    .quick-links {
+      gap: 0 1.5em;
+
+      a {
+        color: var(--bs-white);
+        text-decoration: none;
+        font-weight: 700;
+
+        &:hover {
+          color: var(--bs-bcgold);
+        }
+      }
+    }
+  }
 }
