--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -1,2 +1,7 @@
-// base bootstrap theme
+// Bootstrap theme
+// https://digitalspace.github.io/bcparks-bootstrap-theme/
 @import "@digitalspace/bcparks-bootstrap-theme";
+
+// Design tokens
+// https://www2.gov.bc.ca/gov/content/digital/design-system/foundations/design-tokens
+@import "@bcgov/design-tokens/css/variables.css";
