--- a/frontend/src/router/pages/ApiTest.scss
+++ b/frontend/src/router/pages/ApiTest.scss
@@ -1,3 +1,5 @@
 .card {
-  padding: 2em;
+  // using global design token variables
+  padding: var(--layout-padding-medium);
+  box-shadow: var(--surface-shadow-small);
 }
