--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -6,7 +6,13 @@
 // https://www2.gov.bc.ca/gov/content/digital/design-system/foundations/design-tokens
 @import "@bcgov/design-tokens/css/variables.css";
 
-// Bootstrap overrides
+// Custom styles
+header.page-header {
+  background-color: var(--surface-color-background-light-blue);
+  padding-inline: var(--layout-padding-large);
+  padding-block: var(--layout-padding-medium);
+  margin-bottom: var(--layout-padding-xlarge);
+}
 
 // append search icon appended
 // same spacing as the "success" state
