--- a/frontend/src/router/pages/PageDetails.scss
+++ b/frontend/src/router/pages/PageDetails.scss
@@ -12,22 +12,40 @@
 
 .season {
   display: flex;
+  flex-direction: column-reverse;
   margin-bottom: var(--layout-margin-medium);
 
-  &.expanded {
-    align-items: flex-start;
+  // show horizontally on large screens
+  @media (min-width: 576px) {
+    flex-direction: row;
+
+    &.expanded {
+      align-items: flex-start;
+    }
   }
 
   & > .details {
     color: var(--surface-color-primary-default);
-    border-radius: var(--layout-border-radius-medium);
-    border-top-right-radius: 0;
-    &:not(.expanded) {
-      border-bottom-right-radius: 0;
-    }
+    border-radius: 0 0 var(--layout-border-radius-medium)
+      var(--layout-border-radius-medium);
+
     border: var(--layout-border-width-small) solid
       var(--surface-color-primary-default);
+    border-width: 0 var(--layout-border-width-small)
+      var(--layout-border-width-small);
     flex: 1;
+
+    // seamless borders on larger screens
+    @media (min-width: 576px) {
+      border-radius: var(--layout-border-radius-medium) 0
+        var(--layout-border-radius-medium) var(--layout-border-radius-medium);
+      border-width: var(--layout-border-width-small);
+
+      &:not(.expanded) {
+        border-radius: var(--layout-border-radius-medium) 0 0
+          var(--layout-border-radius-medium);
+      }
+    }
 
     & > header {
       display: flex;
@@ -60,14 +78,20 @@
   }
 
   & > .controls {
-    border-top-right-radius: var(--layout-border-radius-medium);
-    border-bottom-right-radius: var(--layout-border-radius-medium);
+    border-radius: var(--layout-border-radius-medium)
+      var(--layout-border-radius-medium) 0 0;
     border: var(--layout-border-width-small) solid
       var(--surface-color-primary-default);
-    border-left: none;
     display: flex;
     align-items: center;
     padding: var(--layout-padding-medium);
+
+    // seamless borders on larger screens
+    @media (min-width: 576px) {
+      border-left: none;
+      border-radius: 0 var(--layout-border-radius-medium)
+        var(--layout-border-radius-medium) 0;
+    }
 
     .divider {
       border-right: var(--layout-border-width-small) solid
