--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -41,3 +41,10 @@ header.page-header {
 .btn-text-primary {
   --bs-btn-color: var(--theme-primary-blue);
 }
+
+// custom bootstrap alert style: "contact" call-to-action
+.alert-cta-contact {
+  background-color: var(--theme-blue-20);
+  color: var(--theme-primary-blue);
+  border-color: var(--surface-color-border-active);
+}
