--- a/frontend/src/router/pages/ParkDetails.scss
+++ b/frontend/src/router/pages/ParkDetails.scss
@@ -70,14 +70,15 @@
       .details-content {
         padding: 0 var(--layout-padding-large) var(--layout-padding-large);
 
+        .feature {
+          &:not(:last-of-type) {
+            margin-bottom: var(--layout-margin-large);
+          }
+        }
+
         .sub-area-dates {
           border-top: var(--layout-border-width-medium) solid
             var(--surface-color-border-dark);
-          margin-bottom: var(--layout-margin-large);
-
-          &:last-child {
-            margin-bottom: 0;
-          }
         }
       }
     }
