Increase minimum height for preview/edit buttons

--- a/frontend/src/router/pages/ParkDetails.scss
+++ b/frontend/src/router/pages/ParkDetails.scss
@@ -97,6 +97,7 @@
         border-left: none;
         border-radius: 0 var(--layout-border-radius-medium)
           var(--layout-border-radius-medium) 0;
+        min-height: 5.5rem;
       }
 
       .divider {
