CMS-334: add preview page and connect to API

--- a/frontend/src/router/pages/PreviewChanges.scss
+++ b/frontend/src/router/pages/PreviewChanges.scss
@@ -29,6 +29,16 @@
     }
   }
 
+  .type-column {
+    min-width: 5rem;
+    width: 5rem;
+  }
+
+  .date-column {
+    min-width: 9rem;
+    width: 9rem;
+  }
+
   // spacing between date range values
   td:not(:last-child) .date-range {
     margin-right: 1em;
