--- a/frontend-legacy/src/index.css
+++ b/frontend-legacy/src/index.css
@@ -25,8 +25,8 @@ main {
   color: var(--color-grey) !important;
 }
 
-h1, h2 {
-  color: var(--color-blue);
+h1, h2, h3, h4 {
+  color: var(--color-blue) !important;
 }
 
 a {
