CMS-322: Fix label position

--- a/frontend/src/router/pages/SubmitDates.scss
+++ b/frontend/src/router/pages/SubmitDates.scss
@@ -33,6 +33,10 @@
     .dates-row {
       margin-bottom: var(--layout-margin-large);
 
+      .form-label {
+        display: block;
+      }
+
       .form-control {
         margin-bottom: var(--layout-margin-medium);
 
