CMS-322: Fix date picker field width

--- a/frontend/src/router/pages/SubmitDates.scss
+++ b/frontend/src/router/pages/SubmitDates.scss
@@ -37,6 +37,10 @@
         display: block;
       }
 
+      .react-datepicker-wrapper {
+        width: 100%;
+      }
+
       .form-control {
         margin-bottom: var(--layout-margin-medium);
 
