CMS-468: Add hover underline to plain text buttons

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -60,6 +60,11 @@ a:not(.btn):focus {
 // custom bootstrap button style: "text"
 .btn-text-primary {
   --bs-btn-color: var(--theme-primary-blue);
+
+  &:hover,
+  &:focus {
+    text-decoration: underline;
+  }
 }
 
 // custom bootstrap button style: "link"
