CMS-574: Update Review button and disabled styles

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -65,6 +65,11 @@ a:not(.btn):focus {
   &:focus {
     text-decoration: underline;
   }
+
+  &:disabled,
+  &.disabled {
+    border-color: transparent;
+  }
 }
 
 // custom bootstrap button style: "link"
