CMS-517: Update styles and minor fixes.

--- a/frontend/src/components/ConfirmationDialog.scss
+++ b/frontend/src/components/ConfirmationDialog.scss
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  bottom: 0;
+  right: 0;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
@@ -11,24 +11,46 @@
   z-index: 100;
 }
 
-.confirmation-dialog-container {
-  background-color: white;
-  padding: var(--layout-padding-large);
+.confirmation-dialog-outer {
+  display: grid;
+  grid-template-columns: 1% 99%;
   border-radius: var(--layout-border-radius-large);
   box-shadow:
     0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  max-width: 50%;
-  width: 100%;
 
-  @media (max-width: 767px) {
-    max-width: 80%;
+  max-width: 80%;
+  width: 100%;
+  @include from-md {
+    max-width: 50%;
   }
+}
+
+.confirmation-dialog-container {
+  background-color: white;
+  padding: var(--layout-padding-large);
+  border-top-right-radius: var(--layout-border-radius-large);
+  border-bottom-right-radius: var(--layout-border-radius-large);
+}
+
+.confirmation-dialog-left-warning-column {
+  background-color: var(--support-border-color-warning);
+  display: inline-block;
+  padding: 10px;
+  border-top-left-radius: var(--layout-border-radius-large);
+  border-bottom-left-radius: var(--layout-border-radius-large);
 }
 
 .confirmation-dialog-title {
   font-size: var(--typography-regular-H6);
   font-weight: bold;
+  margin-bottom: var(--layout-margin-none);
+}
+
+.confirmation-dialog-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: var(--layout-margin-medium);
 }
 
@@ -42,15 +64,10 @@
   align-items: center;
 }
 
-.confirmation-dialog-cancel-btn {
+.confirmation-dialog-close {
   background-color: transparent;
-  color: var(--surface-color-primary-default);
-  padding: 8px 16px;
-  border-radius: var(--layout-border-radius-default);
-  margin-right: var(--layout-margin-small);
-  transition: background-color 0.3s;
-}
-
-.confirmation-dialog-confirm-btn:hover {
-  background-color: var(--surface-color-primary-default);
+  border: none;
+  color: var(--icons-color-secondary);
+  font-size: 32px;
+  // float: right;
 }
