--- a/frontend/src/router/pages/SubmitDates.scss
+++ b/frontend/src/router/pages/SubmitDates.scss
@@ -5,7 +5,7 @@
     display: flex;
     gap: var(--layout-margin-medium);
 
-    .sub-area-icon {
+    .feature-icon {
       height: 1.25em;
     }
   }
