CMS-467: Consolidate SubArea JSX
CMS-467: WIP: winter fees markup

CMS-467: WIP: slight refactor existing code

CMS-467: Clean up classNames

CMS-467: Clean up icon

CMS-467: Expandablecontent

CMS-467: WIP: data structure

CMS-467: Sort imports for consistency, add prop validation

CMS-467: WIP: use data from backend

CMS-467: Add winter-fees GET rendpoint

CMS-467: Refactor

CMS-467: wip: winter fee season GET endpoint

CMS-467: Remove old attempt at the endpoint

CMS-467: WIP: nonfunctional frontend components

CMS-467: WIP: awaiting clarification in mockups

CMS-467: Add too much info, ready to remove some

CMS-467: Rename for consistency: "Fees"

CMS-467: Use navigate

CMS-467: Header styles

CMS-467: Styles

CMS-467: Remove comment

--- a/frontend/src/router/pages/ParkDetails.scss
+++ b/frontend/src/router/pages/ParkDetails.scss
@@ -1,5 +1,6 @@
 .page.park-details {
-  .sub-area {
+  .sub-area,
+  .winter-fees {
     &:not(:last-of-type) {
       margin-bottom: var(--layout-margin-xxlarge);
     }
@@ -15,7 +16,7 @@
     }
   }
 
-  .season {
+  .expandable {
     display: flex;
     flex-direction: column-reverse;
     margin-bottom: var(--layout-margin-medium);
