CMS-687: Rename "sub areas" to "features" app-wide
CMS-687: Reuse FeatureType component

CMS-687: Fix prop validation

CMS-687: Use regular season component for winter seasons

CMS-687: Update title: "Winter fee"

CMS-687: Hide empty section

CMS-687: Fix preview page path

--- a/frontend/src/router/pages/ParkDetails.scss
+++ b/frontend/src/router/pages/ParkDetails.scss
@@ -1,6 +1,5 @@
 .page.park-details {
-  .sub-area,
-  .winter-fees {
+  .seasons {
     &:not(:last-of-type) {
       margin-bottom: var(--layout-margin-xxlarge);
     }
@@ -77,7 +76,7 @@
           }
         }
 
-        .sub-area-dates {
+        .dates {
           border-top: var(--layout-border-width-medium) solid
             var(--surface-color-border-dark);
         }
