--- a/frontend/src/router/pages/PreviewChanges.scss
+++ b/frontend/src/router/pages/PreviewChanges.scss
@@ -1,4 +1,5 @@
-.page.review-changes {
+.page.review-changes,
+.page.review-winter-fees-changes {
   .feature-type {
     margin-bottom: var(--layout-margin-large);
     padding-block: var(--layout-padding-medium);
@@ -33,11 +34,5 @@
   // spacing between DateRange components
   td:not(:last-child) .date-range {
     margin-right: 1em;
-  }
-
-  .notes {
-    .controls {
-      gap: var(--layout-margin-medium);
-    }
   }
 }
