CMS-623: Adjust spacing on edit/review buttons

--- a/frontend/src/router/pages/ParkDetails.scss
+++ b/frontend/src/router/pages/ParkDetails.scss
@@ -99,7 +99,7 @@
       .divider {
         border-right: var(--layout-border-width-small) solid
           var(--surface-color-primary-default);
-        margin-inline: var(--layout-margin-xsmall);
+        margin-inline: var(--layout-margin-medium);
         height: 2rem;
       }
     }
