CMS-624: Show month dropdown instead of header
CMS-624: Show year

--- a/frontend/src/router/pages/SubmitDates.scss
+++ b/frontend/src/router/pages/SubmitDates.scss
@@ -1,5 +1,5 @@
 .page.submit-dates {
-  h2 {
+  h2:not(.react-datepicker h2) {
     margin-bottom: var(--layout-margin-xlarge);
 
     .feature-icon {
