--- a/frontend/src/router/pages/ParkDetails.scss
+++ b/frontend/src/router/pages/ParkDetails.scss
@@ -63,10 +63,6 @@
         }
       }
 
-      .expand-toggle {
-        margin-left: auto;
-      }
-
       .details-content {
         padding: 0 var(--layout-padding-large) var(--layout-padding-large);
 
@@ -103,7 +99,7 @@
       .divider {
         border-right: var(--layout-border-width-small) solid
           var(--surface-color-primary-default);
-        margin-inline: var(--layout-margin-xsmall);
+        margin-inline: var(--layout-margin-medium);
         height: 2rem;
       }
     }
