CMS-650: Add error flash messages

--- a/frontend/src/components/FlashMessage.scss
+++ b/frontend/src/components/FlashMessage.scss
@@ -23,6 +23,10 @@
     background-color: var(--support-border-color-success);
   }
 
+  &.error {
+    background-color: var(--support-border-color-danger);
+  }
+
   &.info {
     background-color: var(--support-border-color-info);
   }
