CMS-631: Update header spacing

--- a/frontend/src/router/pages/SubmitDates.scss
+++ b/frontend/src/router/pages/SubmitDates.scss
@@ -24,7 +24,7 @@
     }
 
     h3 {
-      margin-bottom: var(--layout-margin-large);
+      margin-bottom: var(--layout-margin-xlarge);
     }
 
     .dates-row {
