--- a/frontend/src/router/pages/SubmitWinterFeesDates.scss
+++ b/frontend/src/router/pages/SubmitWinterFeesDates.scss
@@ -1,6 +1,6 @@
 .page.submit-winter-fees-dates {
   h4 {
-    margin-bottom: var(--layout-margin-large);
+    margin-bottom: var(--layout-margin-xlarge);
   }
 
   .date-type-header {
