--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -21,6 +21,11 @@ header.page-header {
   border-bottom: 1px solid var(--surface-color-border-default);
 }
 
+.page {
+  margin-top: var(--layout-margin-medium);
+  margin-bottom: var(--layout-margin-huge);
+}
+
 // Increase bootstrap x-padding for containers to 16px
 .container {
   --bs-gutter-x: 2rem;
