CMS-709: Hide underline on logo/title link

--- a/frontend/src/router/layouts/MainLayout.scss
+++ b/frontend/src/router/layouts/MainLayout.scss
@@ -6,6 +6,10 @@
   & > header {
     border-bottom: 2px solid var(--theme-primary-gold);
 
+    .logo-link {
+      text-decoration: none;
+    }
+
     .app-title {
       white-space: nowrap;
 
