--- a/frontend/src/router/layouts/MainLayout.scss
+++ b/frontend/src/router/layouts/MainLayout.scss
@@ -5,6 +5,19 @@
 
   & > header {
     border-bottom: 2px solid var(--theme-primary-gold);
+
+    .logo-link {
+      text-decoration: none;
+    }
+
+    .app-title {
+      white-space: nowrap;
+
+      // Align the title text with the logo
+      @include from-md {
+        margin-bottom: 6px;
+      }
+    }
   }
 
   & > main {
@@ -20,7 +33,6 @@
       a {
         color: var(--bs-white);
         text-decoration: none;
-        font-weight: 700;
 
         &:hover {
           color: var(--bs-bcgold);
