CMS-631: Update comments

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -158,8 +158,7 @@ label.form-check-label {
   }
 }
 
-// error messages with optional icons
-// for validation, etc.
+// error messages for validation, etc.
 .error-message {
   color: var(--support-border-color-danger);
   font-size: 0.875em;
