--- a/frontend/src/router/pages/SubmitWinterFeesDates.scss
+++ b/frontend/src/router/pages/SubmitWinterFeesDates.scss
@@ -1,11 +1,16 @@
 .page.submit-winter-fees-dates {
-  h4 {
-    margin-bottom: var(--layout-margin-large);
-  }
-
   .date-type-header {
     font: var(--typography-regular-large-body); // "BC Sans"
     font-family: var(--bs-font-sans-serif); // "BCSans"
+  }
+
+  section {
+    padding-block: var(--layout-margin-large);
+
+    // alternating background color
+    &:nth-of-type(odd) {
+      background-color: var(--surface-color-background-light-gray);
+    }
   }
 
   .dates-row {
@@ -25,6 +30,10 @@
       @include from-lg {
         margin-bottom: 0;
       }
+    }
+
+    .date-range-dash span {
+      line-height: 2.25em;
     }
   }
 }
