CMS-629: Prevent hover underline on active tab

--- a/frontend/src/router/layouts/LandingPageTabs.scss
+++ b/frontend/src/router/layouts/LandingPageTabs.scss
@@ -5,6 +5,11 @@
 
     .nav-tabs {
       border-bottom: none;
+
+      // Prevent underline on active tab
+      a.active:hover {
+        text-decoration: none;
+      }
     }
   }
 }
