--- a/frontend/src/components/FlashMessage.scss
+++ b/frontend/src/components/FlashMessage.scss
@@ -16,7 +16,7 @@
   animation: slideIn 0.3s ease-out;
 
   @include from-md {
-    max-width: 40vw;
+    max-width: min(40vw, 600px);
   }
 
   &.success {
@@ -38,6 +38,7 @@
   &__content {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
   }
 
   &__title {
@@ -50,11 +51,12 @@
   }
 
   &__close {
-    margin-left: var(--layout-margin-large);
+    align-self: flex-start;
     background: none;
     border: none;
     color: var(--typography-color-primary-invert);
     font-size: var(--typography-font-size-h4);
+    line-height: 1;
     opacity: 0.7;
     cursor: pointer;
     padding: 0;
