CMS-772: Add css class to statusbadge component

--- a/frontend/src/components/StatusBadge.scss
+++ b/frontend/src/components/StatusBadge.scss
@@ -1,4 +1,6 @@
-.text-bg-disabled {
-  background-color: var(--surface-color-primary-disabled);
-  color: var(--typography-color-primary) !important;
+.status-badge {
+  &.text-bg-disabled {
+    background-color: var(--surface-color-primary-disabled);
+    color: var(--typography-color-primary) !important;
+  }
 }
