CMS-772: Change text colour of disabled buttons

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -124,6 +124,7 @@ a:not(.btn):focus {
 
   &.btn-text {
     background-color: transparent;
+    color: var(--typography-color-disabled) !important;
   }
 }
 
