CMS-634: CSS tweaks

--- a/frontend/src/router/layouts/MainLayout.scss
+++ b/frontend/src/router/layouts/MainLayout.scss
@@ -3,7 +3,10 @@
   flex-direction: column;
   min-height: 100vh;
 
+  --top-nav-height: 4.5rem;
+
   & > header {
+    height: var(--top-nav-height);
     border-bottom: 2px solid var(--theme-primary-gold);
 
     .logo-link {
