CMS-909: Edit forms for all 3 levels; remove unused v1 pages

--- a/frontend/src/styles/_datepicker.scss
+++ b/frontend/src/styles/_datepicker.scss
@@ -1,3 +1,6 @@
+// Import the library styles
+@use "react-datepicker/dist/react-datepicker.css";
+
 // Overrides for the react-datepicker component package
 .react-datepicker {
   // Prevent the bootstrap theme from making the month name huge
