CMS-905: Add banner on test site

--- a/frontend/src/router/layouts/MainLayout.scss
+++ b/frontend/src/router/layouts/MainLayout.scss
@@ -27,6 +27,10 @@
     flex: 1;
   }
 
+  & > .alert {
+    background-color: var(--support-border-color-danger);
+  }
+
   & > footer {
     min-height: 4.1rem;
 
