CMS-1083: Update DOOT URL

--- a/frontend-legacy/src/components/composite/header/Header.css
+++ b/frontend-legacy/src/components/composite/header/Header.css
@@ -24,6 +24,10 @@
   margin-left: 32px !important;
 }
 
+div.alert-danger {
+  background-color: #ce3e39;
+}
+
 @media (max-width: 768px) {
   header {
     position: fixed;
