CMS-981: Update year field on export page

--- a/frontend/src/router/pages/ExportPage.scss
+++ b/frontend/src/router/pages/ExportPage.scss
@@ -2,4 +2,19 @@
   .section-spaced {
     margin-bottom: var(--layout-margin-xxlarge);
   }
+
+  .select-year-field {
+    .select-year {
+      &__indicator-separator {
+        display: none;
+      }
+      &__dropdown-indicator {
+        padding: 8px;
+        svg {
+          width: 16px;
+          height: 16px;
+        }
+      }
+    }
+  }
 }
