CMS-981: Add custom style for react select

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -8,6 +8,8 @@
 
 // DatePicker component custom styles
 @use "datepicker";
+// React-select component custom styles
+@use "reactselect";
 
 // Break inside words on when nevessary on top-level headings
 h1 {
