CMS-1153: Change readyToPublish default to true

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -247,6 +247,7 @@ table {
 
 // custom tooltip styles
 .tooltip {
+  opacity: 1 !important;
   .tooltip-inner {
     background-color: var(--theme-primary-blue);
   }
