CMS-1153: Add tooltip to ready to publish flag on publish page (#356)
* CMS-1153: Add tooltip to ready to publish flag on publish page

* CMS-1153: Change readyToPublish default to true

* CMS-1153: Code clean up

* CMS-1153: Add tooltip style

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -10,6 +10,8 @@
 @use "datepicker";
 // React-select component custom styles
 @use "reactselect";
+// Tooltip component custom styles
+@use "tooltip";
 
 // Break inside words on when nevessary on top-level headings
 h1 {
