CMS-1290: Add winter fee form

--- a/frontend/src/components/EditAndReviewTable.scss
+++ b/frontend/src/components/EditAndReviewTable.scss
@@ -4,6 +4,11 @@ table {
       th {
         background-color: var(--theme-primary-blue);
       }
+      &.winter {
+        th {
+          background-color: var(--theme-blue-10);
+        }
+      }
     }
     &--park-area,
     &--feature {
